[package]
name = "chronicler"
version = "0.1.0"
authors = ["Ryan Chan <rychan14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.6.0"
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.0.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"